infra/kubernetes/study-note/base/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: study-note-https-redirect
  namespace: study-note
spec:
  redirectScheme:
    scheme: https
    permanent: true
