infra/kubernetes/study-note/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-note-backend
  namespace: study-note
spec:
  type: ClusterIP
  selector:
    app: study-note-backend
  ports:
    - name: http
      port: 3001
      targetPort: http
