infra/kubernetes/study-note/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-note-frontend
  namespace: study-note
spec:
  type: ClusterIP
  selector:
    app: study-note-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
