infra/kubernetes/study-note/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: study-note
  namespace: study-note
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: study-note-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - DOMAIN_PLACEHOLDER
        - www.DOMAIN_PLACEHOLDER
      secretName: study-note-tls-secret
  rules:
    - host: DOMAIN_PLACEHOLDER
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: study-note-backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: study-note-frontend
                port:
                  number: 80
